# ABK

./: .gitattributes  .gitignore  KERNEL_VERSION_SUPPORT.md  README-EN.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  version.json
.devin/: wiki.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: download-manager-from-actions.sh  fix_sukisu_susfs.py  resolve-ksu-ref.sh  update-version-json.py
.github/workflows/: all-managers-full-feature-matrix.yml  build-abk-app-dev.yml  build-abk-app.yml  build-abk-cli.yml  build.yml  bundle-abk-dummy-release.yml  export-abk-manager-cert.yml  get-manager.yml  kernel-a12-5-10.yml  kernel-a13-5-15.yml  kernel-a14-6-1.yml  kernel-a15-6-6.yml  kernel-a16-6-12.yml  kernel-custom.yml  kernel-full-feature-matrix.yml  main.yml  mirror-custom-artifacts.yml  oneplus-build.yml  oneplus-custom.yml  oneplus-full-feature-matrix.yml  release-existing-full-feature-run.yml  update-pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/signing/: abk-manager-cert.env
app/src/main/cpp/: CMakeLists.txt  abk_ksu.cc  abk_ksu.h  abk_ksu_jni.cc  fork_signing_jni.cc  logging.h
app/src/main/cpp/uapi/: abk_control.h  supercall.h
app_dev/: build.gradle.kts  strings.xml
cli/: README.md  abk.py
cli/i18n/: __init__.py  de-de.json  en-us.json  eo.json  es-es.json  fr-fr.json  hi-in.json  ja-jp.json  jp-neko.json  (+6 more)
data/: announcement.json
ddk/: setup.sh
docs/: self-hosted-runner.md
gradle/: libs.versions.toml
web/: guide.html  index.html  package-lock.json  package.json
zram/: setup_zstdp.sh
(+122 files in other folders)
